tests/test_files_pa3/new/SemanticErrors/LocalVarsNotInitB4Use14.ic
class A
{

	static void main(string[] args) { }

	int a()
	{
		int b = 0;
	
		if (b == 0)
		{
			int c;
			return c;
		}
		
		return b;
	}
}